# git_hub_actions

./: .dockerignore  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  tmp.py
.github/workflows/: cl.yml
app/: main.py
test/: test_01.py
