[tool.poetry]
name = "git-hub-actions"
version = "0.1.0"
description = "test actions with fastapi"
authors = ["arletino <titkov@nxt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.31.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
