[tool.poetry]
name = "git-hub-actions"
version = "0.1.0"
description = "test actions with fastapi"
authors = ["arletino <titkov@nxt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standart"], version = "^0.31.1"}
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
